Professor Leonard material

--- a/real-analysis/abbott_notes.tex
+++ b/real-analysis/abbott_notes.tex
@@ -344,7 +344,7 @@ The first one is straightforward because $\lvert a-b \rvert = 0$ and it will be
 less than any $\epsilon > 0$.
 
 For the proof of the second direction, start by asserting the opposite, which is
-$a \neq b$. To wrestle with this we look at the phrase "for every $epsilon >
+$a \neq b$. To wrestle with this we look at the phrase "for every $\epsilon >
 0$". We can pick a random value ($\epsilon_0$), \underline{and reckon that it will be equal
 to $\lvert a-b \rvert$}, which is greater than zero. Ie,
 
@@ -673,6 +673,9 @@ Same logic for when $p < 0$.
                 = -a-b = \lvert a \rvert + \lvert b \rvert$.
 
         \end{enumerate}
+
+    \item Given a function $f$ and a subset $A$ of its domain, let $f(A)$ represent the
+        range of $f$ over the set $A$; that is, $f(A) = \{f(x) : x \in A\}$.
 
         \begin{enumerate}
             \item Let $f(x) = x^2$. If $A = [0, 2]$ (the closed interval $~\{x
