--- a/basics/leonard/0.2_functions/functions.tex
+++ b/basics/leonard/0.2_functions/functions.tex
@@ -43,6 +43,7 @@ One of the most common functions is the absolute value function, which is an exa
     \end{cases}
 \end{equation}
 
+Left off around 35 min.
 
 \end{document}
 
