Organization and intro to functions

--- a/basics/leonard/0.2_functions/functions.tex
+++ b/basics/leonard/0.2_functions/functions.tex
@@ -43,7 +43,30 @@ One of the most common functions is the absolute value function, which is an exa
     \end{cases}
 \end{equation}
 
-Left off around 35 min.
+\subsubsection{Domain and range}
+
+\textbf{Domain:} All input values for a function.\\ 
+\textbf{Range:} All output values for a function.\\
+
+There can be physical restraints (eg, no negative distance), or formulaic restraints (eg,
+$1/x~x \neq 0$.
+
+\textbf{Natural Domain:} All values that 'work' in the function.\\
+
+Example:
+
+
+\begin{align*}
+f(x) = x^3\\
+x \in \mathbb{R}\\
+\\
+g(x) = \frac{1}{(x-1)(x-3)}\\
+x \neq 1,~x \neq 3
+\end{align*}
+
+Need to watch out for denominators and roots.\\
+
+Left off around 50 min.
 
 \end{document}
 
