Finish Leonard's functions

--- a/basics/leonard/0.2_functions/functions.tex
+++ b/basics/leonard/0.2_functions/functions.tex
@@ -66,7 +66,59 @@ x \neq 1,~x \neq 3
 
 Need to watch out for denominators and roots.\\
 
-Left off around 50 min.
+He's giving the following example:
+
+\begin{align}
+    f(x) = \sqrt{x^2 - 5x + 6}\\
+    x^2 - 5x + 6 \geq 0\\
+    (x-2)(2-3) \geq 0
+\end{align}
+
+You can plot the quadratic, can only take the domain values that give a positive (or zero)
+range. You wind up with:
+
+\begin{equation}
+    D: (-\infty, 2] \cup [3, \infty)
+\end{equation}
+
+\textbf{Interesting point.} Sometimes you can simplify a function. If you do so, which you
+should, you need to keep the constraints of the original domain. For example:
+
+\begin{align}
+    f(x) = \frac{x^2-4}{x-2}\\
+    2 \notin D
+\end{align}
+
+Even though $f(x)$ can be simplified
+
+\begin{align}
+    f(x) = \frac{x^2 - 4}{x - 2}\\
+    f(x) = \frac{(x + 2)(x - 2)}{x - 2}\\
+    f(x) = x + 2
+\end{align}
+
+You would plot such a function with a hole in the graph. If you can simplify and cancel
+out the restriction, it's a hole. If you can't cancel it out, it's an asymptote.\\
+
+To figure out restrictions on the range, first find restrictions on domain, then see what
+kind of interval you have on the range. Another way is to rearrange the function to solve
+for the outcome and then observe the restrictions on the range. Eg
+
+\begin{align}
+    y = \frac{x + 1}{x - 1}\\
+    x = \frac{y + 1}{y - 1}
+\end{align}
+
+Saying this method won't work for every function, however.\\
+
+The other restrictions you need to be mindful of come in the context of real life examples
+(eg, can't have negative length).
+
+
+\subsubsection{Odd and even functions}
+
+Even functions are symmetric around the y axis $f(-x) = f(x)$. Odd functions are symmetric around the
+origin $f(-x) = -f(x)$.
 
 \end{document}
 
