More trig functions

--- a/basics/leonard/0.3_trig-graphing/trig-graphing.tex
+++ b/basics/leonard/0.3_trig-graphing/trig-graphing.tex
@@ -58,6 +58,14 @@ circumference of the circle, $cos(\theta)=x$, $sin(\theta) = y$, $tan(\theta) = 
 sin(\theta) / cos(\theta)$. And the reciprocal functions are just the reciprocals of these
 outcomes.
 
+\begin{center}
+\includegraphics[scale=0.1]{Unit-circle.png}
+\end{center}
+
+He's stressing how important it is to know this unit circle. For example, one should know
+the sin, cos, and tan of $\{0, \pi/2, \pi, 3\pi/2, 2\pi\}$. And should also know $\{\pi/3,
+\pi/4, \pi/6\}$.
+
 \subsection{Trigonometric functions across the quadrants}
 
 Whether the trig functions are positive or negative depends on the quadrant. The mnemonic
@@ -103,7 +111,7 @@ Steps:
         
 \end{enumerate}
 
-\section{Graphic Trigonometric Functions}
+\section{Graphing Trigonometric Functions}
 
 We're going to graph things like this: $y = A \cdot sin(Bx)$ or $y = A \cdot cos(Bx)$. To
 appreciate the impact of the coefficients, we'll compare $y = sin(x)$ against $y = 2 \cdot
@@ -114,7 +122,35 @@ sin(4x)$.
 The period of a wave function is the stretch over which it's unique (ie, before it
 repeats). \\
 
-Left off at 47:39.
+We get the amplitude and period by $\text{Amplitude} = \lvert A \rvert$ and $\text{Period}
+= 2 \pi / B$.
+
+You can break the period up into quarters to find the first positive and negative
+amplitudes and the first x axis crossover point.
+
+\subsection{Shifting the function}
+
+Shifting the sin or cos function by a constant (ie, $y = A \cdot cos(Bx - c)$). Which is
+rewritten as $y = A \cdot cos[B(x - c/b)]$. For reasons that aren't quite intuitive to me,
+you flip the sign in terms of the shift---$-c/b$ is a shift to the right, and vice versa
+for positive.
+
+\textbf{Example:}
+
+\begin{align*}
+y = 3cos(2x + \frac{\pi}{2})\\
+y = 3cos[2(x + \frac{\pi}{4})]\\
+\text{Amplitude} = 3\\
+\text{Period} = \frac{2\pi}{2}\\
+\text{Period} = \pi\\
+\text{Shift} = \frac{\pi}{4}
+\end{align*}
+
+You'll shift to the left by $\pi/4$.
+
+
+In closing, he's saying you'll need to know trig identites (eg, $sin^2 + cos^2 = 1$, $tan
+= sin/cos$). Half angle and double angle formulas ($sin(2x) = 2sin(x)cos(x)$). 
 
 \end{document}
 
