Start properties of limits

--- a/basics/leonard/1.1_limits/limits.tex
+++ b/basics/leonard/1.1_limits/limits.tex
@@ -154,7 +154,13 @@ general limit and, if it converges at a point, it'll have a single solution.
 
 The limit is $\infty$ !!!\\
 
-Left off at 1:20:54
+So actually, because the function goes to pos or neg infinity as it approaches from either
+side, it doesn't converge on a single limit, and so we'd say the limit doesn't exist.\\
+
+He's talking a bit about the general case of thinking about an infinity limit as you
+approach some x: $\lim_{x\to a^+} f(x) = \infty$, $\lim_{x \to a^+} = f(x) -\infty$,
+$\lim_{x\to a^-} f(x) \infty$, $\lim_{x\to a^-} f(x) - \infty$. Should be able to
+understand what happens to the function at all four of these cases.
 
 \end{document}
 
