--- a/basics/leonard/1.2_limit-properties/limit-properties.tex
+++ b/basics/leonard/1.2_limit-properties/limit-properties.tex
@@ -4,6 +4,7 @@
 \usepackage{amsmath}
 \usepackage{enumerate}
 \usepackage{amsfonts}
+\usepackage{tikz}
 
 \setlength{\parindent}{0pt}
 
@@ -67,6 +68,9 @@ Given two functions with limits that exist:
         \lim_{x\to a}[f(x)]^n = \left[\lim_{x\to a} f(x) \right]^n \rightarrow \lim_{x\to
         a} \sqrt[n]{f(x)} \rightarrow \sqrt[n]{\lim_{x\to a}f(x)}
         $$
+
+\end{enumerate}
+
 \subsection{Example}
 
 \begin{align*}
@@ -133,7 +137,7 @@ determine the sign on both sides.
     \lim_{x \to 1} \frac{x-1}{\sqrt{x} - 1} \cdot \frac{\sqrt{x} + 1}{\sqrt{x} + 1}\\
     \lim_{x \to 1} \frac{(x - 1)(\sqrt{x} + 1)}{x - 1}\\
     \lim_{x \to 1} \sqrt{x} + 1\\
-    \lim{x \to 1} \sqrt{1} + 1 = 2
+    \lim_{x \to 1} \sqrt{1} + 1 = 2
 \end{align}
 
 The logic behind (2) is to multiply by the \emph{conjugate}, since you can't necessarily
@@ -163,8 +167,61 @@ $p+q$.
     \lim_{x\to 0} \frac{1}{2}
 \end{align*}
 
-Left off at 1:00:53
+\section{Piece-Wise Limits}
 
-\end{enumerate}
+We're going to find some one-sided limits and see if they are equal. \\
+
+\textbf{Example.}
+
+$$
+f(x) = \begin{cases}
+    \frac{1}{x+2} & \text{if } x < -2\\
+    x^2 - 5 & \text{if } -2 > x \leq 3\\
+    \sqrt{x+13} & \text{if } x > 3
+\end{cases}
+$$
+A helpful approach is to plot a number line and draw the intervals of the piece-wise
+function:\\
+
+\begin{tikzpicture}
+    \draw[-] (-4, 0) -- (4, 0);
+    \draw[-] (-2, -.1) -- (-2, .1);
+    \draw[-] (3, -.1) -- (3, .1);
+
+    \node[below] at (-2, -0.1) {$-2$};
+    \node[below] at (3, -0.1) {$3$};
+    \node[above] at (-3, 0.1) {$f_1$};
+    \node[above] at (0, 0.1) {$f_2$};
+    \node[above] at (4, .1) {$f_3$};
+
+\end{tikzpicture}
+
+If the functions have the same limit as they approach the interval between them, then the
+limit can be said to exist; otherwise, it doesn't exist.\\
+
+Let's work through the first two functions with $-2$ as the limit:
+
+\begin{align*}
+    f_1(x) &= \lim_{x \to -2} \frac{1}{x + 2}\\
+           &= \lim_{x\to -2} \frac{1}{x+2} \cdot \frac{x-2}{x-2}\\
+           &= \lim_{x\to -2} \frac{x-2}{x^2-4}
+\end{align*}
+
+Hmm okay I'm stuck. Multiplying by the conjugate doesn't seem to free up the denominator
+from being zero when plugging in the limit.\\
+
+Aha okay so if the function doesn't reduce to $0/0$, that suggests there's an asymptote,
+not a hole. Then we need to do the sign analysis test to determine the direction of the
+asymptote.
+
+\begin{align*}
+    f_1(x) &= \lim{x\to -2} \frac{1}{-3+2}\\
+           &= -1\\
+    \lim_{x\to -2^-} \frac{1}{x + 2} &= -\infty
+\end{align*}
+
+Because the limit approaching $-2$ from the left does not equal the limit approaching $-2$
+from the right (I didn't show computation for approaching from the right here), the limit
+is said to not exist.
 
 \end{document}
